--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "apexcharts": "^4.7.0",
+    "flyonui": "^2.1.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@iconify-json/tabler": "^1.2.18",
+    "@iconify/tailwind4": "^1.0.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
