--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
