--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^4.7.0",
     "flyonui": "^2.3.0",
     "lodash": "^4.17.21",
+    "node-os-utils": "^1.3.7",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
@@ -28,6 +29,7 @@
     "@eslint/js": "^9.25.0",
     "@iconify-json/tabler": "^1.2.18",
     "@iconify/tailwind4": "^1.0.6",
+    "@types/node": "^24.0.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
